@@ -48,6 +48,8 @@ protected:							// protected attributes
     int score;						// score the team has accumulated
     int lastScore_;                 //!< score from the beginning of the round
 
+    bool lastEmpty_;                //!< flag indicating whether the team was empty on the last call to UpdateAppearance
+
     int numHumans;					// number of human players on the team
     int numAIs;						// number of AI players on the team
 
